--- a/src/index.html
+++ b/src/index.html
@@ -5,59 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
+    <link rel="icon" href="../assets/logo.svg" type="image/svg">
     <style>
-        .paragraph-text span{
-            position: relative;
-        }
-
-        .paragraph-text span.active{
-            color: rgb(255, 0, 200);
-        }
-
-        .paragraph-text span.correct{
-            color: green;
-        }
-        .paragraph-text span.incorrect{
-            color: rgb(255, 0, 0);
-            background-color: rgb(255, 176, 176);
-        }
-
-        .wrapper .input-field {
-            padding: 13px 20px 0 !important;
-            z-index: -99 !important;
-            opacity: 0 !important;
-            position: absolute !important; 
-        }
+        @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');
     </style>
+    <title>Turbo-Typist</title>
 </head>
 
-<body class="bg-slate-200">
-    
+<body class="bg-[#2b2b2b]">
+
+    <nav class="flex items-center gap-3 m-5 sm:mt-10 justify-center">
+        <div class="logo w-10">
+            <img src="../assets/logo.svg" alt="logo">
+        </div>
+        <h1 style="font-family: Ubuntu Sans Mono;" class="text-white font-semibold text-2xl sm:text-4xl">Turbo-Typist</h1>
+    </nav>
+
     <div class="wrapper">
-        <input type="text" class="input-field"> 
+        <input type="text" class="input-field">
         <div class="content-box">
             <div class="typing-text">
-                <div class="paragraph-text"></div> 
-                <div class="content">
-                    <ul class="result-details">
-                        <li class="time">
-                            <p class="text-white">Time Left:</p>
-                            <span><b>60</b>s</span>
+                <div style="font-family: Ubuntu Sans Mono;" class="paragraph-text text-center p-4 mt-16 sm:mt-32 m-auto sm:text-3xl sm:w-[70%] text-[#878787]">
+                </div>
+                <div class="content sm:mt-10">
+                    <ul class="result-details justify-between px-4 text-white text-center">
+                        <li class="time text-xl sm:text-4xl text-[#f5ed00]">
+                            <span><b>60</b></span>
                         </li>
-                        <li class="mistake">
-                            <p>Mistake</p>
-                            <span>0</span>
-                        </li>
-                        <li class="wpm">
-                            <p>WPM:</p>
-                            <span>0</span>
-                        </li>
-                        <li class="cpm">
-                            <p>CPM:</p>
-                            <span>0</span>
-                        </li>
+                        <span class="font-mono flex justify-center gap-9 mt-5 sm:text-2xl">
+                            <li class="mistake flex">
+                                <p>Mistakes:</p>
+                                <span class="ml-1 text-[#f5ed00]">0</span>
+                            </li>
+                            <li class="wpm flex">
+                                <p>WPM:</p>
+                                <span class="ml-1 text-[#f5ed00]">0</span>
+                            </li>
+                            <li class="cpm flex">
+                                <p>CPM:</p>
+                                <span class="ml-1 text-[#f5ed00]">0</span>
+                            </li>
+                        </span>
                     </ul>
-                    <button class="text-yellow-500 border border-yellow-500">TRY AGAIN</button>
+                    <div class="m-3 flex justify-center sm:text-2xl sm:m-7">
+                        <button class="text-[#f5ed00] border-2 border-[#f5ed00] rounded-lg p-1.5 font-semibold">TRY
+                            AGAIN</button>
+                    </div>
                 </div>
             </div>
         </div>
